# temporal-dsql-deploy

./: .env.example  .env.integration  .env.local  .env.terraform  .gitignore  AGENTS.md  CLEANUP-SUMMARY.md  Cargo.toml  DOCKER-COMPOSE-CLEANUP.md  Dockerfile  ISSUE-DSQL-LOCKING.md  ISSUE-OPENSEARCH-SERVERLESS.md  README.md  REVIEW-SUMMARY.md  config.example.toml  docker-compose.local-test.yml  docker-compose.services.yml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.kiro/specs/dsql-locking-compatibility/: design.md  dsql-locking-patch-plan.md  execution-fencing-analysis.md  requirements.md  tasks.md
.kiro/specs/per-workflow-scheduler/: design.md  requirements.md  tasks.md
.kiro/specs/rust-cli-rewrite/: .config.kiro  design.md  requirements.md  tasks.md
crates/cli/: Cargo.toml
crates/cli/src/: exec.rs  main.rs  paths.rs
crates/cli/src/cmd/: build.rs  config.rs  dev.rs  infra.rs  mod.rs  schema.rs
crates/config/: Cargo.toml
crates/config/src/: env.rs  lib.rs  model.rs  validate.rs
crates/dagger-client/: Cargo.toml
crates/dagger-client/src/: lib.rs
crates/dagger-client/tests/: quote_tests.rs
dev/: docker-compose.yml
dev/dynamicconfig/: development-dsql.yaml
docker/: render-and-start.sh
docker/config/: alloy-config.alloy  dynamicconfig.yaml  grafana-dashboards.yaml  grafana-datasources.yaml  mimir.yaml  persistence-dsql-custom.template.yaml  persistence-dsql-elasticsearch.template.yaml  persistence-dsql-iam.template.yaml  persistence-dsql-multiservice.template.yaml  persistence-dsql.template.yaml
dsql-tests/: README.md  dsql_load_test.py  dsql_signals_queries_test.py  dsql_token_refresh_test.py  pyproject.toml
dsql-tests/copilot/: error_injection.py  metrics.py  spike_load.py  stress_workflows.py
dsql-tests/plugin/: hello_activity.py
dsql-tests/temporal/: chasm_scheduler_test.py  nexus_test.py
dynamicconfig/: development-dsql.yaml
grafana/: Dockerfile  entrypoint.sh
grafana/copilot/: copilot.json
grafana/dsql/: persistence.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
grafana/server/: server.json
profiles/: README.md
profiles/copilot/: .env.example  README.md  docker-compose.yml
profiles/copilot/config/: alloy.alloy  grafana-dashboards.yaml  grafana-datasources.yaml  loki.yaml
profiles/copilot/dynamicconfig/: development-dsql.yaml
profiles/dsql/: .env.example  README.md  docker-compose.yml
scripts/: README.md  WORKFLOW.md  build-temporal-dsql.sh  check-vpn-status.sh  cleanup-aws-resources.sh  cleanup.sh  complete-integration.sh  connect-vpn.sh  deploy-test-env.sh  deploy.sh  recreate-postgres-database.sh  reset-dsql-schema-helm-approach.sh  setup-aws-vpn-client.sh  setup-conn-lease-table.sh  setup-dsql-schema-simple.sh  setup-elasticsearch.sh  setup-rate-limiter-table.sh  setup-schema.sh  terraform-to-env.sh  test-aws-vpn-connectivity.sh  test-dsql-connectivity.sh  test-multiservice-setup.sh  test-ssl-connectivity.sh  test-temporal-dsql-integration.sh  test.sh
src/tdeploy/: __init__.py  build.py  env.py  infra.py  kb.py  main.py  paths.py  schema.py  services.py  terraform.py
src/temporal_dsql_deploy/: cli.py
terraform/: main.tf  outputs.tf  tfplan  variables.tf  versions.tf
terraform/copilot/: main.tf  outputs.tf  variables.tf
terraform/shared/: main.tf  outputs.tf  variables.tf
test-dsql-connectivity/: Dockerfile  go.mod  go.sum  main.go
