[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
eyre = "0.6"
color-eyre = "0.6"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
which = "7"
tracing = "0.1"

# AWS SDK
aws-config = "1"
aws-sdk-dsql = "1"
aws-sdk-dynamodb = "1"

# Testing
proptest = "1"

# Internal crates
dsqld-config = { path = "crates/config" }
dagger-client = { path = "crates/dagger-client" }
