[project]
name = "temporal-dsql-deploy"
version = "0.1.0"
description = "Provision Aurora DSQL resources and configure Temporal for external OpenSearch"
readme = "README.md"
authors = [
    { name = "Ian Wilkinson", email = "ianw1@me.com" }
]
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.3,<2",
    "pydantic-settings>=2.12.0",
    "temporalio>=1.21.1",
    "typer>=0.20.0",
]

[project.scripts]
dsql-deploy = "temporal_dsql_deploy.cli:app"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
