[project]
name = "temporal-dsql-deploy"
version = "0.1.0"
description = "Provision Aurora DSQL resources and configure Temporal for external OpenSearch"
readme = "README.md"
authors = [
    { name = "Ian Wilkinson", email = "ianw1@me.com" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.3,<2",
    "temporalio>=1.21.1",
]

[tool.uv]
# No package to build - this is a scripts-only project
package = false
