[package]
name = "dsqld-cli"
version = "0.1.0"
edition.workspace = true
description = "Temporal DSQL local development CLI"

[[bin]]
name = "dsqld"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
which = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
dsqld-config = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dsql = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
