[package]
name = "dagger-client"
version = "0.1.0"
edition = "2024"
description = "Thin Dagger GraphQL client — flat sequential queries with ID passing"

[dependencies]
base64 = "0.22"
eyre = "0.6"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
serde_json = "1"
